fixed sizing and spacing issues with images on demo page

--- a/client/src/Components/Demo_Page/Demo_Page.scss
+++ b/client/src/Components/Demo_Page/Demo_Page.scss
@@ -21,6 +21,14 @@
     width: 12.5rem;
     height: 10rem;
     border-radius: 10px;
+    margin-bottom: 2rem;
+
+    &2 {
+      margin-bottom: 2rem;
+      width: 12.5rem;
+      height: 10rem;
+      border-radius: 10px;
+    }
   }
 
   &__img-container {
